# rh-fnnp

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
01_create_system_expansion/: .gitignore  Dockerfile  README.md  pyproject.toml
01_create_system_expansion/src/: auto_reactions_extension_layer.py  calc_automated_extension_layer.py  config-docker.ini  config.ini  generate_matrix.py  get_raw_material_data.py  main.py
01_create_system_expansion/templates/: reaction_extension_layer.xlsx
02_automatedSimplifiedExtensionLayer/: .gitignore  main_final_model.m  main_final_model.py
02_automatedSimplifiedExtensionLayer/00_matlab/: main_generate_initial_model.m  main_generate_se_model.m  main_prepare_flows.m  main_run_all.m
02_automatedSimplifiedExtensionLayer/00_matlab/00_archive/: main_final_model_old.m  main_generate_allocated_model_old.m
02_automatedSimplifiedExtensionLayer/00_matlab/functions/: add_Q_B.m  (+95 more)
02_automatedSimplifiedExtensionLayer/utils/: TransferModelToProcessAdding.py  add_Q_B.py  check_model_Ecoinvent.py  cm_classes.py  convert_units.py  excel_interaction.py  excel_interaction.py.old  get_added_processes_V2.py  get_costs.py  get_ecoinvent_matrices.py  get_energy_matrix_A.py  get_flow_analysis.py  get_info.py  get_objective.py  get_streams.py  get_waste_and_elementary_flows_direct_emission.py  make_flow_revision.py  make_process_adding_V2.py  make_process_adding_V2_Layer23.py  make_waste_and_elementary_flows.py  manipulate_matrixes.py  work_done_SMILES.py  work_done_formular.py  write2model.py
old/: Modeler.ipynb  classLoader.py  eso_inspect.ipynb  loadin.py  main.py
src/: DataPrep.py  DataPreparation.py  VisModCom.py  classMetaData.py  classTidy.py  classTransfomer.py
src/modules/: classImporter.py  classMetaData.py  classTransfomer.py  classVisualizer.py
src/notebooks/: Modeler.ipynb  Visualizer.ipynb  classModeler.ipynb  classVisualizer.ipynb
src/utils/: clean_up_TM_symbols.py  generic_process_description_Layer3.py  get_added_processes_V2_Layer23.py  get_costs.py  get_list_ecoinvent.py  get_match_table.py  get_meta_data_to_update.py  get_missing_meta_data.py  get_price_matrix_A.py  get_process_adding.py  get_waste_and_elementary_flows_direct_emissions.py  make_ecoinvent_one_addition.py  make_flow_revision.py  perform_allocation.py  perform_check_before_allocation.py  perform_flow_revision.py  test_each_process.py  work_done_CAS.py  work_done_Hv.py  write2model.py
test/: test.ipynb  test.txt  test_main.py
(+1 files in other folders)
