[tool.poetry]
name = "fnnp"
version = "0.1.0"
description = "University project"
authors = ["Rauen, Marius <marius.rauen@rfh-campus.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.0"
openpyxl = "^3.1.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.2"
tensorflow = "^2.15.0"
autokeras = "^2.0.0"
ipykernel = "^6.29.5"
opencv-python = "^4.10.0.84"
mitdeeplearning = "^0.6.1"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
nbmake = "^1.5.4"
jupyter = "^1.1.1"
cvxopt = "^1.3.2"
torch = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


