[tool.poetry]
name = "fnnp"
version = "0.1.0"
description = "University project"
authors = ["Rauen, Marius <marius.rauen@rfh-campus.de>"]
readme = "README.md"
packages = [{include = "src"}] 

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.2"
torch = "^2.5.1"
tqdm = "^4.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
