[tool.poetry]
name = "01-create-system-expansion"
version = "0.1.0"
description = ""
authors = ["Jonas Goßen <jonas.gossen@gmail.com>"]
readme = "README.md"
packages = [{include = "01_create_system_expansion"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
requests = "^2.31.0"
xlsxwriter = "^3.1.9"
pyodbc = "^5.0.1"
pyarrow = "^14.0.1"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
